--- a/MiniSQL/MiniSQL.vcxproj.filters
+++ b/MiniSQL/MiniSQL.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="RecordM.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="CatalogManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="API.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Interpreter.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Structure.h">
@@ -33,6 +42,15 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="RecordM.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CatalogManager.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="API.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Interpreter.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
