--- a/MiniSQL/MiniSQL.vcxproj.filters
+++ b/MiniSQL/MiniSQL.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="RecordM.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="IndexManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Structure.h">
@@ -33,6 +36,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="RecordM.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="IndexManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
