--- a/MiniSQL/MiniSQL.vcxproj
+++ b/MiniSQL/MiniSQL.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="API.cpp" />
     <ClCompile Include="BufferManager.cpp" />
     <ClCompile Include="CatalogManager.cpp" />
+    <ClCompile Include="IndexManager.cpp" />
     <ClCompile Include="Interpreter.cpp" />
     <ClCompile Include="MiniSQL.cpp" />
     <ClCompile Include="RecordM.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="API.h" />
     <ClInclude Include="BufferManager.h" />
     <ClInclude Include="CatalogManager.h" />
+    <ClInclude Include="IndexManager.h" />
     <ClInclude Include="Interpreter.h" />
     <ClInclude Include="RecordM.h" />
     <ClInclude Include="Structure.h" />
