--- a/MiniSQL/MiniSQL.vcxproj.filters
+++ b/MiniSQL/MiniSQL.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Interpreter.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="IndexManager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Structure.h">
@@ -51,6 +54,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Interpreter.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="IndexManager.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
