--- a/MiniSQL/MiniSQL.vcxproj.filters
+++ b/MiniSQL/MiniSQL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="IndexManager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Structure.h">
